# mani_servo

./: .gitignore  CMakeLists.txt  README.md
src/: angle.txt  angle2.txt  forward_kinematic.cpp  inverse_kinematic.cpp  main.cpp  servo_manager.cpp  servo_manager.hpp  test.txt  tree_point.cpp
